@@ -61,6 +61,8 @@ sequence<StringS> StringSS;
 sequence<MyEnumS> MyEnumSS;
 sequence<MyClassS> MyClassSS;
 
+sequence<StringSS> StringSSS;
+
 dictionary<byte, bool> ByteBoolD;
 dictionary<short, int> ShortIntD;
 dictionary<long, float> LongFloatD;
@@ -125,6 +127,9 @@ dictionary<string, MyEnum> StringMyEnumD;
     
     StringSS opStringSS(StringSS p1, StringSS p2,
 			out StringSS p3);
+
+    StringSSS opStringSSS(StringSSS p1, StringSSS p2,
+			out StringSSS p3);
 
     ByteBoolD opByteBoolD(ByteBoolD p1, ByteBoolD p2,
 			  out ByteBoolD p3);
