@@ -4,6 +4,15 @@ Changes since version 1.3.0
 - Fixed a bug when making asynchronous invocations on a routed
   proxy.
 
+- Changed the way sequences are unmarshaled to protect against
+  malicous messages with faked very large sequence count values.
+  While even with previous versions of Ice, buffer overruns were
+  impossible, malicious messages could cause large amounts of
+  memory to be preallocated, causing the receiving process to
+  run out of memory. This is no longer possible -- the total
+  amount of memory preallocated for sequences during unmarshaling
+  is now capped at Ice.MessageSizeMax.
+
 - Removed a bogus assert that could happen under certain race
   conditions when a connection timeout occurs.
 
